results/scraper/box64/1938
/box64/src/libtools/my_x11_xevent.c:260:13. cannot build

root@localhost ~/b/build (main) [2]# make install
[  0%] Built target WRAPPERS32
[  0%] Built target WRAPPERS
[ 11%] Built target interpreter
[ 12%] Building C object CMakeFiles/box64.dir/src/libtools/my_x11_xevent.c.o
/root/box64/src/libtools/my_x11_xevent.c: In function ‘convertXEvent’:
/root/box64/src/libtools/my_x11_xevent.c:260:13: error: a label can only be part of a statement and a declaration is not a statement
  260 |             register_events_t* head = register_events_head;
      |             ^~~~~~~~~~~~~~~~~
/root/box64/src/libtools/my_x11_xevent.c: In function ‘unconvertXEvent’:
/root/box64/src/libtools/my_x11_xevent.c:496:13: error: a label can only be part of a statement and a declaration is not a statement
  496 |             register_events_t* head = register_events_head;
      |             ^~~~~~~~~~~~~~~~~
make[2]: *** [CMakeFiles/box64.dir/build.make:1270: CMakeFiles/box64.dir/src/libtools/my_x11_xevent.c.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:102: CMakeFiles/box64.dir/all] Error 2
make: *** [Makefile:182: all] Error 2